# metamodule-plugin-libc

./: CMakeLists.txt  dso_handle.c  libc.cmake  libclib.cmake  libgcc.cmake  libm.cmake  libstdcpp.cmake  libsupcpp.cmake
arm-none-eabihf-1/: dot-config
include/: c++config.h
include/bits/: c++config.h  c++locale_internal.h
lib/ct-ng-config/: c-library-build-cmd  c-library-build-cmd2
lib/ldscripts/: armelf.x  armelf.xbn  armelf.xc  armelf.xce  armelf.xd  armelf.xdc  armelf.xdce  armelf.xde  armelf.xdw  armelf.xdwe  armelf.xe  armelf.xn  armelf.xs  armelf.xsc  armelf.xsce  armelf.xse  armelf.xsw  armelf.xswe  armelf.xw  armelf.xwe
lib/libstdc++-config/: config
